# hexviz

./: .gitignore  README.md  pyproject.toml  requirements.txt
hexviz/: Attention_Visualization.py  app.py  attention.py  config.py  ec_number.py  models.py  plot.py  view.py  🧬Attention_Visualization.py
hexviz/.streamlit/: config.toml
hexviz/pages/: 1_🗺️Identify_Interesting_Heads.py  2_📄Documentation.py  2_🦅Birds_Eye_View.py  3_🏗️Test:_Birds_Eye_View.py  3_📄Documentation.py  Identify_interesting_Heads.py  🗺️Identify_Interesting_Heads.py
hexviz/streamlit/: Attention_On_Structure.py
protention/: attention.py
protention/streamlit/: Attention_On_Structure.py
tests/: test_attention.py  test_models.py
