[tool.poetry]
name = "protention"
version = "0.1.0"
description = "Visualize and analyze attention patterns for protein language model on structures"
authors = ["Aksel Lenes <aksel.lenes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"
stmol = "^0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
