[tool.poetry]
name = "protention"
version = "0.1.0"
description = "Visualize and analyze attention patterns for protein language model on structures"
authors = ["Aksel Lenes <aksel.lenes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"
stmol = "^0.0.9"
biopython = "^1.81"
transformers = "^4.27.1"
torch = "^2.0.0"
sentencepiece = "^0.1.97"
tape-proteins = "^0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
