[tool.poetry]
name = "hexviz"
version = "0.1.0"
description = "Visualize and analyze attention patterns for protein language models on structures"
authors = ["Aksel Lenes <aksel.lenes@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.9,<3.9.7 || >3.9.7,<4.0.0"
streamlit = "1.17"
stmol = "^0.0.9"
biopython = "^1.81"
transformers = "^4.27.1"
torch = "^2.0.0"
sentencepiece = "^0.1.97"
tape-proteins = "^0.5"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
